Mobile organiser view - reduce horizontal spacing and ensure component menu fits on one line (#2170)
* reduce spacing and fits component menu on one row

* update padding

* shared component nav styles

* fix breakpoint

--- a/app/eventyay/static/pretixcontrol/scss/main.scss
+++ b/app/eventyay/static/pretixcontrol/scss/main.scss
@@ -1088,6 +1088,12 @@ h1 .label {
         height: auto;
         overflow-y: visible;
         box-sizing: border-box;
+        padding: 0 10px;
+    }
+
+    #page-wrapper > .container-fluid {
+        padding-left: 4px;
+        padding-right: 4px;
     }
 }
 
